# zupload

./: .gitignore  README.md  pyproject.toml  requirements.txt  settings.yml
spreadsheet-examples/: cte_hr_2025_09.xlsx  paris_nid2026.xlsx
src/: dataset_reader.py  exiter.py  file_manager.py  json_manager.py  meta_tools.py  portal_interactor.py  runner.py  settings.py  upload_collections.py  upload_cte_hr_collections.py  utils.py
src/constants/: colors.py  general_settings.py  obj_specs.py  organizations.py  people.py  spatial_boxes.py  static_meta_paths.py  stations.py
src/constants/static_meta/: avengers_description.txt  cities_munich_description.txt  cities_paris_description.txt  cities_zurich_description.txt  fluxcom_all_years_per_var_description.txt  fluxcom_yearly_description.txt  lpj_guess_eu_description.txt  lpj_guess_global_description.txt  stilt_documents_description.txt  vprm_2023_description.txt
src/queries/: find_doc_by_name.txt  get_prev_by_name_cities.txt  get_prev_by_name_icos.txt
src/zupload/: collection_cli.py  logs.py  try_ingest_cli.py  utils.py  validation.py  zupload_cli.py
src/zupload/constants/: envri.py  excluded_vars.py  object_specs.py  organizations.py  stations.py  upload_descriptions.py
