[project]
name = "zupload"
authors = [
  { name = "Zois Zogopoulos", email = "zois.zogopoulos@mgeo.lu.se" },
]
version = "0.1.0"
dependencies = [
    "halo",
    "h5netcdf",
    "icoscp_core",
    "netcdf4",
    "openpyxl",
    "pandas",
    "pyproj",
    "requests",
    "typer",
    "xarray",
]
requires-python = ">=3.8"

[project.scripts]
zupload = "zupload.zupload_cli:app"
try-ingest = "zupload.try_ingest_cli:app"
collection = "zupload.collection_cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
